[gd_scene load_steps=10 format=3 uid="uid://dg3a2aq0axjau"]

[ext_resource type="Script" path="res://UI/card.gd" id="1_qsvci"]
[ext_resource type="Texture2D" uid="uid://b5b4qpyjp0bqs" path="res://CardAssets/wood.png" id="2_qrt6j"]
[ext_resource type="Texture2D" uid="uid://bd36p2sj8crms" path="res://CardAssets/BGPurple.png" id="3_e0twh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_40iw4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_teais"]

[sub_resource type="Animation" id="Animation_0qm5j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextureRect:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_54txm"]
resource_name = "fondiEsauriti"
length = 0.3
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06, 0.16, 0.24, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.999999, 0.33303, 0.377593, 1), Color(1, 1, 1, 1), Color(0.999999, 0.33303, 0.377593, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_nw0k8"]
resource_name = "ingrandimento"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lk54e"]
_data = {
"RESET": SubResource("Animation_0qm5j"),
"fondiEsauriti": SubResource("Animation_54txm"),
"ingrandimento": SubResource("Animation_nw0k8")
}

[node name="Card" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 184.0
offset_bottom = 232.0
script = ExtResource("1_qsvci")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = 4
layout_mode = 1
offset_right = 184.0
offset_bottom = 231.0
texture = ExtResource("2_qrt6j")
expand_mode = 1
metadata/TipoCarta = ""

[node name="Costo" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
offset_left = 56.0
offset_top = 176.0
offset_right = 137.0
offset_bottom = 203.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 31
text = "dwadwad"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="BG" type="TextureRect" parent="TextureRect"]
z_index = -1
layout_mode = 0
offset_right = 184.0
offset_bottom = 224.0
texture = ExtResource("3_e0twh")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="Image" type="TextureRect" parent="TextureRect"]
layout_mode = 0
offset_left = 29.0
offset_top = 26.0
offset_right = 160.0
offset_bottom = 100.0

[node name="buy" type="Button" parent="."]
layout_mode = 1
offset_right = 184.0
offset_bottom = 232.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_40iw4")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_teais")
flat = true
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lk54e")
}

[connection signal="mouse_entered" from="buy" to="." method="_on_buy_mouse_entered"]
[connection signal="mouse_exited" from="buy" to="." method="_on_buy_mouse_exited"]
[connection signal="pressed" from="buy" to="." method="_on_buy_pressed"]
